8307156: native_thread not protected by TLH

Reviewed-by: phh, mgronlun
Backport-of: 0c6529d2d38a668f74936cca7803ca9de1a05d49